Update package-lock.json and package.json with new dependencies

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "fs": "^0.0.1-security",
     "gifencoder": "^2.0.1",
     "sqlite3": "^5.1.6",
+    "uuid": "^9.0.1",
     "vm2": "3.9.19"
   }
 }
